# AI_Find_Customer

./: .ai_analysis_cache.pkl  .employee_ai_analysis_cache.pkl  .env.example  .gitignore  AI_ANALYSIS_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  EMPLOYEE_AI_ANALYSIS_REPORT.md  LICENSE  LLM_FIX_COMPLETE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  README_CN.md  README_CREWAI_INTEGRATION.md  README_SCRIPTS.md  README_WEB.md  README_en.md  SOLUTION_LLM_EVALUATION_FIX.md  STATUS_REPORT.md  STREAMLIT_FIX_REPORT.md  TROUBLESHOOTING_LLM.md  ai_analyzer.py  check_llm_config.py  crewai_agents.py  crewai_main.py  crewai_simplified.py  crewai_tasks.py  crewai_tools.py  demo_ai_analysis.py  docker-compose.yml  employee_ai_analyzer.py  env_fix_helper.py  extract_contact_info.py  fix_llm_connection.py  fix_streamlit_startup.py  generate_report.py  integration_guide.py  keyword_generator.py  multi_agent_framework.py  optimized_ai_analyzer.py  (+39 more)
backend/: .env.example  AIHunter.spec  automation_job.example.json  main.py  models.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  email_craft_agent.py  insight_agent.py  keyword_gen_agent.py  lead_extract_agent.py  parse_description_agent.py  search_agent.py
backend/api/: __init__.py  app.py  automation_routes.py  email_routes.py  hunt_store.py  routes.py  security.py  settings_routes.py  sse.py
backend/automation/: job_queue.py  metrics.py  notifier.py  runtime.py
backend/config/: settings.py  settings_store.py
backend/docs/: email-template-outreach.md
backend/emailing/: __init__.py  body_format.py  email_sender.py  (+9 more)
(+270 files in other folders)
