[project]
name = "ai-hunter"
version = "0.1.0"
description = "Multi-agent B2B lead hunting system powered by LangGraph"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "live: marks tests as live integration tests that hit the real license server (deselect with '-m not live')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
