[package]
name = "ai-hunter"
version = "1.0.0"
description = "AI Hunter Desktop"
authors = ["AI Hunter"]
edition = "2021"

[lib]
name = "ai_hunter_lib"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
